finshi search select and user navigation select

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
               <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
             </svg>
           </button>
+          <div class="search__association-box">
+            <ul class="search__association">
+              <li class="search__association-item">1</li>
+              <li class="search__association-item">2</li>
+              <li class="search__association-item">3</li>
+            </ul>
+          </div>
         </form>
 
         <nav class="user-nav">
@@ -37,6 +44,14 @@
               <use xlink:href="img/sprite.svg#icon-bookmark"></use>
             </svg>
             <span class="user-nav__notification">7</span>
+
+            <div class="user-nav__message-box--1">
+              <ul class="user-nav__message">
+                <li class="user-nav__message-item">1. Welcome to back</li>
+                <li class="user-nav__message-item">2. you have new message</li>
+                <li class="user-nav__message-item">3. Good Morning</li>
+              </ul>
+            </div>
           </div>
 
           <div class="user-nav__icon-box">
@@ -44,6 +59,13 @@
               <use xlink:href="img/sprite.svg#icon-chat"></use>
             </svg>
             <span class="user-nav__notification">13</span>
+            <div class="user-nav__message-box--2">
+              <ul class="user-nav__message">
+                <li class="user-nav__message-item">1. Welcome to back</li>
+                <li class="user-nav__message-item">2. you have new message</li>
+                <li class="user-nav__message-item">3. Good Morning</li>
+              </ul>
+            </div>
           </div>
 
           <div class="user-nav__user">
@@ -53,6 +75,14 @@
               class="user-nav__user-photo"
             />
             <span class="user-nav__user-name">Jonas</span>
+            <div class="user-nav__setting-box">
+              <ul class="user-nav__setting">
+                <li class="user-nav__setting-item">your name</li>
+                <li class="user-nav__setting-item">your info</li>
+                <li class="user-nav__setting-item">your project</li>
+                <li class="user-nav__setting-item">logout</li>
+              </ul>
+            </div>
           </div>
         </nav>
       </header>
@@ -106,6 +136,7 @@
                 alt="Photo of hotel 1"
                 class="gallery__photo"
               />
+              <span class="gallery__photo-name">Lodon</span>
             </figure>
 
             <figure class="gallery__item">
@@ -114,6 +145,7 @@
                 alt="Photo of hotel 2"
                 class="gallery__photo"
               />
+              <span class="gallery__photo-name">Beijing</span>
             </figure>
 
             <figure class="gallery__item">
@@ -122,6 +154,7 @@
                 alt="Photo of hotel 3"
                 class="gallery__photo"
               />
+              <span class="gallery__photo-name">Chengdu</span>
             </figure>
           </div>
 
